# Tempo

./: .gitattributes.sample  .gitignore  .gitmodules  AGENTS.md  CODEOWNERS  Dockerfile  MIGRATION.md  MIGRATION_v0.1.0.md  MIGRATION_v1.md  README.md  SEC-SCS  Setup.bat  Setup.sh  Tempo.uproject
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: build_and_package.yml  build_package_linux.yml  prune_engine_mods.yml  publish_engine_mods.yml  security-semgrep.yml  security-trivy.yml  tempo_build_and_package.yml  tempo_publish_engine_mods.yml  test_packaged.yml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultGameUserSettings.ini
Content/: TempoGameMode_BP.uasset  TempoHUD.uasset
Content/BikeLanes/: MF_ParametricStreetMarkingsWithBikeLanes.uasset  MF_RepeatedLineMask.uasset  MF_SingleLineMask.uasset  MI_Vayu_FreewayAsphalt_Road_ParametricLanes.uasset  M_Vayu_Freeway_Asphalt.uasset  RoadOffsetOriginEnum.uasset  Vayu_MeshRoadBP.uasset
Content/Python/: gen_api.py
EngineMods/: EngineMods.json  README.md
ExampleClients/: LidarPreview.py  ReRun.py  SensorPlayground.py  TempoMCP.py  TempoSimExamples.ipynb
ExampleClients/Rust/MovementPlayground/: Cargo.toml
ExampleClients/Rust/MovementPlayground/src/: movement_playground.rs
ExampleClients/Rust/SensorPlayground/: Cargo.toml
ExampleClients/Rust/SensorPlayground/src/: sensor_playground.rs
ExampleClients/Rust/TempoMCP/: Cargo.toml
ExampleClients/Rust/TempoMCP/src/: tempo_mcp.rs
ExampleClients/Rust/WorldPlayground/: .gitignore  Cargo.toml
ExampleClients/Rust/WorldPlayground/src/: world_playground.rs
ExampleClients/cpp/: CMakeLists.txt  README.md
ExampleClients/cpp/GreeterLoop/: greeter_loop.cc
ExampleClients/cpp/MovementPlayground/: movement_playground.cc
ExampleClients/cpp/SensorPlayground/: sensor_playground.cc
ExampleClients/cpp/TempoMCP/: tempo_mcp.cc
ExampleClients/cpp/WorldPlayground/: world_playground.cc
Scripts/: ApplyPatch.bat  ApplyPatch.sh  Build.bat  Build.sh  Clean.bat  Clean.sh  ExtractPatch.bat  ExtractPatch.sh  ExtractReleasePaks.bat  ExtractReleasePaks.sh  FindPackagedBinary.sh  FindProjectRoot.bat  FindProjectRoot.sh  FindUnreal.bat  FindUnreal.sh  GenAPI.bat  GenAPI.sh  GenProtos.bat  GenProtos.sh  InstallEngineMods.bat  InstallEngineMods.sh  InstallToolChain.sh  InstallToolchain.sh  Package.bat  Package.sh  PreBuild.bat  PreBuild.sh  Rename.sh  RenamePakChunks.bat  RenamePakChunks.sh  Run.bat  Run.sh  Setup.sh  SyncDeps.bat  SyncDeps.sh  Test.bat  Test.sh  TestPython.bat  TestPython.sh  TestPythonAPI.bat  (+11 more)
Source/: Tempo.Target.cs  TempoEditor.Target.cs
TempoAgents/: README.md  TempoAgents.uplugin
TempoCore/: README.md  TempoCore.uplugin
TempoCore/Content/Python/API/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
TempoCore/Content/Python/API/tempo/: .gitignore  TempoImageUtils.py  TempoLidarUtils.py  __init__.py  _tempo_context.py  editor_procedural_generation.py  greeter.py  tempo_agents.py  tempo_agents_editor.py  tempo_core.py  tempo_core_editor.py  tempo_geographic.py  tempo_labels.py  tempo_map_query.py  tempo_movement.py  tempo_observable_events.py  tempo_sensors.py  tempo_time.py  tempo_vehicles.py  tempo_world.py  vayu_sim.py  vayu_sim_city_generation.py
TempoCore/Content/Python/API/tempo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TempoCore/Content/Python/API/tempo/TempoAgentsEditor/: TempoAgentsEditor_pb2.py
TempoCore/Content/Python/API/tempo/TempoCamera/: Camera_pb2.py
TempoCore/Content/Python/API/tempo/TempoCoreEditor/: TempoCoreEditor_pb2_grpc.py
TempoCore/Content/Python/API/tempo/TempoGeographic/: Geographic_pb2.py
TempoCore/Content/Python/API/tempo/TempoLabels/: Labels_pb2.py
TempoCore/Content/Python/API/tempo/TempoMapQuery/: MapQueries_pb2.py
TempoCore/Content/Python/API/tempo/TempoObservableEvents/: ObservableEvents_pb2_grpc.py
TempoCore/Content/Python/API/tempo/TempoSensors/: Sensors_pb2.py
TempoCore/Content/Python/API/tempo/TempoTime/: Time_pb2.py  Time_pb2_grpc.py
TempoCore/Content/Python/API/tempo/TempoWorld/: WorldState_pb2_grpc.py
TempoCore/Content/Python/API/tempo_sim/: .gitignore  TempoImageUtils.py  TempoLidarUtils.py  __init__.py  _tempo_context.py
TempoCore/Content/Python/cpp_api_template/: CMakeLists.txt  README.md
TempoCore/Content/Python/cpp_api_template/include/tempo/: context.h  error.h  result.h  streaming.h
TempoCore/Content/Python/cpp_api_template/src/: context.cc  error.cc
TempoCore/Content/Rust/API/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
TempoCore/Content/Rust/API/proto/TempoAgents/: MapQueries.proto
TempoCore/Content/Rust/API/proto/TempoCore/: Empty.proto  Geometry.proto  TempoCore.proto  Time.proto
TempoCore/Content/Rust/API/proto/TempoGeographic/: Geographic.proto
TempoCore/Content/Rust/API/proto/TempoMovement/: MovementControlService.proto
TempoCore/Content/Rust/API/proto/TempoSensors/: Camera.proto  Common.proto  Labels.proto  Lidar.proto  Sensors.proto
TempoCore/Content/Rust/API/proto/TempoWorld/: WorldControl.proto  WorldState.proto
TempoCore/Content/Rust/API/src/: context.rs  error.rs  greeter.rs  lib.rs  proto.rs  streaming.rs  tempo_agents.rs  tempo_core.rs  tempo_geographic.rs  tempo_movement.rs  tempo_sensors.rs  tempo_world.rs
TempoCore/Content/Rust/Codegen/: Cargo.toml
TempoCore/Content/Rust/Codegen/src/: main.rs
TempoGeographic/: README.md  TempoGeographic.uplugin
TempoMovement/: README.md  TempoMovement.uplugin
TempoPCG/: README.md  TempoPCG.uplugin
TempoROSBridge/: .gitignore  README.md  TempoROSBridge.uplugin
TempoSensors/: BOUNDING_BOX_PLAN.md  README.md  TempoSensors.uplugin
TempoWorld/: README.md  TempoWorld.uplugin
Tests/Rust/: .gitignore  Cargo.toml  README.md
Tests/Rust/tests/: contract.rs  integration.rs
ToolChains/: TempoLinuxToolChain.cs  TempoModuleRules.cs  TempoVCToolChain.cs
Tools/TransportBenchmark/: Cargo.toml  README.md  build.rs
Tools/TransportBenchmark/proto/: Echo.proto
Tools/TransportBenchmark/src/: lib.rs
UnrealBuildToolMods/: UEBuildTarget.cs
(+1394 files in other folders)
