# Copyright Tempo Simulation, LLC. All Rights Reserved

[package]
name = "tempo-sim"
version = "0.1.0"
edition = "2021"
description = "Rust client API for Tempo simulation"
license = "Proprietary"

include = [
    "Cargo.toml",
    "build.rs",
    "src/**/*.rs",
]

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-stream = "0.1"
thiserror = "2.0"
once_cell = "1.19"
http = "1.0"
